# text_gen_api

./: Cargo.toml
src/: main.rs
src/api/: mod.rs  text_generation.rs  version.rs
