[package]
name = "text_gen_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
rust-bert = "0.19.0"
serde = "1.0.147"
serde_json = "1.0.87"
derive_more = "0.99.17"
env_logger = "0.9.1"
log = "0.4.17"
uuid = "1.2.1"
tokio = "1.21.2"